@@ -1,5 +1,6 @@
 mpdscribble 0.20 - not yet released
   * curl: implement libCURL timeouts
+  * curl: prevent recursive read calls
 
 
 mpdscribble 0.19 - 2009-12-26
